--- a/20191121/index.html
+++ b/20191121/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <title>Document</title>
@@ -11,14 +12,12 @@
 
     <div id="app"></div>
 
-    <script>
-        class APP extends React.Component
-        {
-            render ()
-            {
-                return 
-                (
-                    <div>
+    <script type="text/babel">
+        class App extends React.Component{
+            render (){
+                return(
+
+                    <div className="app-content">
                         <h1>
                             Hey, ninjas
                         </h1>
